[package]
name = "kiss3d-trackball"
version = "0.3.1"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
edition = "2018"
description = "Virtual Trackball Camera Mode for Kiss3D"
documentation = "https://doc.qu1x.dev/kiss3d-trackball"
repository = "https://github.com/qu1x/kiss3d-trackball"
readme = "README.md"
license = "BSD-2-Clause-Patent"
keywords = [
	"virtual-trackball",
	"exponential-map",
	"quaternion",
	"arcball",
	"camera",
]
categories = [
	"no-std",
	"graphics",
]
include = [
	"src/**/*.rs",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSES/*.md",
]

[badges]
travis-ci = { repository = "qu1x/kiss3d-trackball" }

[dependencies]
kiss3d = "0.32"
nalgebra = { version = "0.29", default-features = false, features = ["libm"] }
trackball = "0.7"

[features]
cc = ["trackball/cc"]
