[package]
name = "kiss3d-trackball"
version = "0.5.0"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
edition = "2021"
description = "Virtual Trackball Camera Mode for Kiss3D"
documentation = "https://doc.qu1x.dev/kiss3d-trackball"
repository = "https://github.com/qu1x/kiss3d-trackball"
readme = "README.md"
license = "BSD-2-Clause-Patent"
keywords = [
	"virtual-trackball",
	"exponential-map",
	"quaternion",
	"arcball",
	"camera",
]
categories = [
	"no-std",
	"graphics",
]
include = [
	"src/**/*.rs",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSES/*.md",
]

[dependencies]
kiss3d = "0.34"
trackball = "0.8"

[features]
cc = ["trackball/cc"]
