[package]
name = "kiss3d-trackball"
version = "0.7.0"
rust-version = "1.87.0"
edition = "2024"
authors = ["Rouven Spreckels <rs@qu1x.dev>"]
description = "Coherent Virtual Trackball Camera Mode for Kiss 3D"
documentation = "https://docs.rs/kiss3d-trackball"
repository = "https://github.com/qu1x/kiss3d-trackball"
readme = "README.md"
license = "BSD-2-Clause-Patent"
keywords = [
	"virtual-trackball",
	"exponential-map",
	"quaternion",
	"arcball",
	"camera",
]
categories = [
	"no-std",
	"graphics",
]
include = [
	"src/**/*.rs",
	"examples/**/*.rs",
	"Cargo.toml",
	"README.md",
	"RELEASES.md",
	"LICENSE-BSD",
]

[dependencies]
kiss3d = "0.37.0"
trackball = "0.17.1"

[features]
cc = ["trackball/cc"]
